<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
				 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<artifactId>andalite-parent</artifactId>
	<groupId>com.jeroensteenbeeke.andalite</groupId>
	<packaging>pom</packaging>
	<version>1.1-SNAPSHOT</version>

	<name>Andalite Parent</name>
	<inceptionYear>2014</inceptionYear>
	<description>Library for Java Code Transformations</description>

	<developers>
		<developer>
			<name>Jeroen Steenbeeke</name>
			<roles>
				<role>Developer</role>
			</roles>
		</developer>
	</developers>

	<licenses>
		<license>
			<name>GNU LESSER GENERAL PUBLIC LICENSE</name>
			<url>http://www.gnu.org/licenses/lgpl-3.0.txt</url>
			<distribution>repo</distribution>
			<comments>Version 3, 29 June 2007</comments>
		</license>
	</licenses>


	<scm>
		<url>https://github.com/jsteenbeeke/andalite</url>
		<connection>scm:git:git@github.com:jsteenbeeke/andalite.gits</connection>
		<developerConnection>scm:git:git@github.com:jsteenbeeke/andalite.git</developerConnection>
		<tag>HEAD</tag>
	</scm>

	<distributionManagement>
		<repository>
			<id>repo-jeroensteenbeeke-releases</id>
			<name>repo-jeroensteenbeeke-releases</name>
			<url>https://repo.jeroensteenbeeke.nl/artifactory/libs-release-local</url>
		</repository>
		<snapshotRepository>
			<id>repo-jeroensteenbeeke-snapshots</id>
			<name>repo-jeroensteenbeeke-snapshots</name>
			<url>https://repo.jeroensteenbeeke.nl/artifactory/libs-snapshot-local</url>
		</snapshotRepository>
	</distributionManagement>

	<repositories>
		<repository>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<id>central</id>
			<name>libs-release</name>
			<url>https://repo.jeroensteenbeeke.nl/artifactory/libs-release</url>
		</repository>
		<repository>
			<snapshots/>
			<id>snapshots</id>
			<name>libs-snapshot</name>
			<url>https://repo.jeroensteenbeeke.nl/artifactory/libs-snapshot</url>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<id>central</id>
			<name>libs-release</name>
			<url>https://repo.jeroensteenbeeke.nl/artifactory/libs-release</url>
		</pluginRepository>
		<pluginRepository>
			<snapshots/>
			<id>snapshots</id>
			<name>libs-snapshot</name>
			<url>https://repo.jeroensteenbeeke.nl/artifactory/libs-snapshot</url>
		</pluginRepository>
	</pluginRepositories>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.jeroensteenbeeke</groupId>
				<artifactId>lux</artifactId>
				<version>${lux.version}</version>
			</dependency>

			<!-- Test Dependencies -->
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.hamcrest</groupId>
				<artifactId>hamcrest-core</artifactId>
				<version>${hamcrest.version}</version>
			</dependency>

			<dependency>
				<groupId>javax</groupId>
				<artifactId>javaee-api</artifactId>
				<version>${javaee.version}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>com.tngtech.archunit</groupId>
				<artifactId>archunit</artifactId>
				<version>${archunit.version}</version>
				<scope>test</scope>
			</dependency>


			<!-- Guava -->
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>${guava.version}</version>
			</dependency>

			<!-- Code Integrity -->
			<dependency>
				<groupId>com.google.code.findbugs</groupId>
				<artifactId>annotations</artifactId>
				<version>${findbugs.annotations.version}</version>
			</dependency>

			<!-- Java parsing -->
			<dependency>
				<groupId>com.github.javaparser</groupId>
				<artifactId>javaparser-symbol-solver-core</artifactId>
				<version>${javaparser.version}</version>
			</dependency>

			<dependency>
				<groupId>com.google.googlejavaformat</groupId>
				<artifactId>google-java-format</artifactId>
				<version>${google-java-format.version}</version>
			</dependency>

			<!-- Logging -->
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.api.version}</version>
			</dependency>

			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-simple</artifactId>
				<version>${slf4j.api.version}</version>
				<scope>test</scope>
			</dependency>

			<!-- Parser -->
			<dependency>
				<groupId>org.antlr</groupId>
				<artifactId>antlr4</artifactId>
				<version>${antlr.version}</version>
			</dependency>

			<!-- Modules -->
			<dependency>
				<groupId>com.jeroensteenbeeke.andalite</groupId>
				<artifactId>andalite-core</artifactId>
				<version>${andalite.version}</version>
			</dependency>

			<dependency>
				<groupId>com.jeroensteenbeeke.andalite</groupId>
				<artifactId>andalite-testbase</artifactId>
				<version>${andalite.version}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>com.jeroensteenbeeke.andalite</groupId>
				<artifactId>andalite-java</artifactId>
				<version>${andalite.version}</version>
			</dependency>

			<dependency>
				<groupId>com.jeroensteenbeeke.andalite</groupId>
				<artifactId>andalite-xml</artifactId>
				<version>${andalite.version}</version>
			</dependency>

			<dependency>
				<groupId>com.jeroensteenbeeke.andalite</groupId>
				<artifactId>andalite-forge</artifactId>
				<version>${andalite.version}</version>
			</dependency>

			<dependency>
				<groupId>com.jeroensteenbeeke.andalite</groupId>
				<artifactId>andalite-maven-plugin</artifactId>
				<version>${andalite.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<inherited>true</inherited>
				<groupId>com.mycila</groupId>
				<artifactId>license-maven-plugin</artifactId>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.antlr</groupId>
					<artifactId>antlr4-maven-plugin</artifactId>
					<version>${maven.antlr.plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${maven.compiler.plugin.version}</version>
					<configuration>
						<target>11</target>
						<source>11</source>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>${maven.jacoco.plugin.version}</version>
					<executions>
						<execution>
							<id>prepare-unit-tests</id>
							<phase>test-compile</phase>
							<goals>
								<goal>prepare-agent</goal>
							</goals>
						</execution>

						<execution>
							<id>coverage-test</id>
							<phase>test</phase>
							<goals>
								<goal>report</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>com.mycila</groupId>
					<artifactId>license-maven-plugin</artifactId>
					<version>${maven.license.plugin.version}</version>
					<executions>
						<execution>
							<id>check-license</id>
							<phase>compile</phase>
							<goals>
								<goal>check</goal>
							</goals>
							<inherited>false</inherited>
							<configuration>
							</configuration>
						</execution>
					</executions>
					<configuration>
						<header>header.txt</header>
						<includes>
							<include>src/**/*.java</include>
						</includes>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>${maven.source.plugin.version}</version>
					<executions>
						<execution>
							<id>attach-sources</id>
							<goals>
								<goal>jar</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>${maven.jar.plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>${maven.javadoc.plugin.version}</version>
					<executions>
						<execution>
							<id>attach-javadocs</id>
							<goals>
								<goal>jar</goal>
							</goals>
						</execution>
					</executions>

					<configuration>
						<tags>
							<tag>
								<name>non.public</name>
								<!-- Indicates that the method is not part of the public API -->
								<placement>m</placement>
								<head>THIS METHOD IS NOT PART OF THE PUBLIC API</head>
							</tag>
						</tags>
					</configuration>
				</plugin>

			</plugins>
		</pluginManagement>
	</build>

	<properties>
		<andalite.version>1.1-SNAPSHOT</andalite.version>
		<antlr.version>4.5.3</antlr.version>

		<!-- Dependency Versions -->
		<guava.version>28.0-jre</guava.version>
		<hamcrest.version>1.3</hamcrest.version>
		<javaee.version>7.0</javaee.version>
		<findbugs.annotations.version>3.0.0</findbugs.annotations.version>
		<javaparser.version>3.14.9</javaparser.version>
		<junit.version>4.12</junit.version>
		<lux.version>1.0-SNAPSHOT</lux.version>
		<parser.version>1.0.17</parser.version>
		<slf4j.api.version>1.7.10</slf4j.api.version>

		<!-- Plugin Versions -->
		<maven.antlr.plugin.version>4.5.3</maven.antlr.plugin.version>
		<maven.compiler.plugin.version>3.2</maven.compiler.plugin.version>
		<maven.jacoco.plugin.version>0.8.4</maven.jacoco.plugin.version>
		<maven.jar.plugin.version>3.1.1</maven.jar.plugin.version>
		<maven.javadoc.plugin.version>3.1.0</maven.javadoc.plugin.version>
		<maven.license.plugin.version>2.3</maven.license.plugin.version>
		<maven.lifecycle.plugin.version>1.0.0</maven.lifecycle.plugin.version>
		<maven.source.plugin.version>2.4</maven.source.plugin.version>
		<maven.surefire.plugin.version>3.0.0-M3</maven.surefire.plugin.version>

		<!-- Other settings -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<argLine>-Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
		<archunit.version>0.10.1</archunit.version>
		<google-java-format.version>1.7</google-java-format.version>
	</properties>

	<modules>
		<module>core</module>
		<module>testbase</module>
		<module>java</module>
		<module>xml</module>
		<module>forge</module>
		<module>maven-plugin</module>
	</modules>
</project>
